# PCAP-Analyzer

./: README.md  pyproject.toml
docs/: technical.md
pcap_analyzer/: analyzer.py  cli.py  compare.py  csv_export.py  parser.py  report.py  rules.py
pcap_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_analyzer.py
